summative.moria.Moria.scala.error
Erreur de compilation :
Moria:21: error: not found: value getColorSol
}while(getColorSol()==Color.green)
       ^