summative.moria.Moria.scala.code


retourne()
avance()
do{
  if (estSurBiscuit()){
    prendBiscuit()
    retourne()
    while (!estSurBiscuit()){
      avance()
    }
    recule()
    poseBiscuit()
    retourne()
    avance()
  }

  else
  avance()
  
}while(getColorSol()==Color.green)


